fix(jdk17): List.getFirst()/getLast() and Thread.threadId() in the batch-1 pickups